Mobile: alignment issues
Still Fixing Alignment Issues

--- a/css/style.css
+++ b/css/style.css
@@ -108,14 +108,14 @@ body  {
 @media (max-width: 480px) {    
   .h3_class{
    text-align: center;
-   margin-left: 32%;
+   margin-left: 28%;
   }    
       
   }
 
 @media (max-width: 480px) {
   .aussie{
-    margin-left: 35%;
+    margin-left: 50%;
   }
 }
 
@@ -226,7 +226,7 @@ h1 {
   letter-spacing: 3px;
   color: black;
   text-shadow: 3px 2px grey;
-  margin-left: 22%;
+  margin-left: 13%;
   
 }
 }
@@ -261,6 +261,7 @@ h1 {
   text-align: center;
   font-size: 20px;
   list-style: none;
+  margin-left: 20%;
 }
 }
 
